--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -5,7 +5,7 @@
 		<div id="top-header">
 			<div class="container">
 				<div class="pull-left">
-					<span> Merhaba E-shop!</span>
+					<span> E-shop! </span>
 				</div>
 				<div class="pull-right">
 					<ul class="header-top-links">
