--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -29,12 +29,43 @@
 		<div class="container">
 			<!-- row -->
 			<div class="row">
-               {{ setting.contact|safe }}
-			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /section -->
+
+              	<div class = "cold-md-4">
+					<div class="billing-details">
+
+                        <div class="section-title">
+                            <h3 class="title">Contact Form</h3>
+						</div>
+                            {% if messages %}
+                                {% for message in messages %}
+                                    <div class="alert alert-{{message.tags}}" role="alert">
+                                        {{ message }}
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+
+
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <input type="submit" value="SEND FORM">
+                        </form>
+                    </div>
+
+                </div>
+
+                <div class="col-md-8">
+					<div class="section-title">
+						<h3 class="title">Contact Information</h3>
+					</div>
+                            {{ setting.contact|safe }}
+				</div>
+            </div>
+            <!-- /row -->
+        </div>
+        <!-- /container -->
+    </div>
+    <!-- /section -->
+
 
 {% endblock %}
