--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "homebase.html" %}
 
-{% block title %} About- {{ setting.company }} {% endblock %}
+{% block title %} About {{ setting.company }} {% endblock %}
 {% block keywords %} {{ setting.keywords }} {% endblock %}
 {% block description %} {{ setting.description }} {% endblock %}
 
@@ -16,7 +16,7 @@
 	<div id="breadcrumb">
 		<div class="container">
 			<ul class="breadcrumb">
-				<li><a href="/">HomePage</a></li>
+				<li><a href="/">Home Page</a></li>
 				<li class="active">About</li>
 			</ul>
 		</div>
