--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -12,7 +12,7 @@
 					<!-- banner -->
 					{% for rs in sliderdata %}
 					<div class="banner banner-1">
-						<img src="{{ rs.image.url }}" alt="">
+						<img src="{{ rs.image.url }}" alt="" style="height: 600px">
 						<div class="banner-caption text-center">
 							<h2>{{ rs.title }}</h2>
 							<h3 class="white-color font-weak">{{ rs.description }}</h3>
