--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -16,7 +16,7 @@
 	<div id="breadcrumb">
 		<div class="container">
 			<ul class="breadcrumb">
-				<li><a href="/">Home Page</a></li>
+				<li><a href="/">Home</a></li>
 				<li class="active">Contact</li>
 			</ul>
 		</div>
@@ -45,7 +45,7 @@
                             {% endif %}
 
 
-                        <form action="" method="post">
+                        <form id="checkout-form" class="clearfix" method="post">
                             {% csrf_token %}
                             {{ form.as_p }}
                             <input type="submit" value="SEND FORM">
