--- a/home/templates/products.html
+++ b/home/templates/products.html
@@ -23,7 +23,7 @@
 	</div>
 	<!-- /BREADCRUMB -->
 
-	<!-- section -->
+<!-- section -->
 	<div class="section">
 		<!-- container -->
 		<div class="container">
@@ -167,8 +167,6 @@
 				<!-- MAIN -->
 				<div id="main" class="col-md-9">
 					<!-- store top filter -->
-					<h2>{{ categorydata.title }} Products </h2>
-					<hr>
 					<div class="store-filter clearfix">
 						<div class="pull-left">
 							<div class="row-filter">
@@ -209,38 +207,43 @@
 					<div id="store">
 						<!-- row -->
 						<div class="row">
-							{% for rs in products %}
-							<!-- Product Single -->
-							<div class="col-md-4 col-sm-6 col-xs-6">
-								<div class="product product-single">
-									<div class="product-thumb">
-										<div class="product-label">
-											<span>New</span>
-											<span class="sale">-20%</span>
-										</div>
-										<a href="/product/{{ rs.id }}/{{ rs.slug }}" class="main-btn quick-view"><i class="fa fa-search-plus"></i> Quick view</a>
-										<img src="{{ rs.image.url }}" alt="">
-									</div>
-									<div class="product-body">
-										<h3 class="product-price">${{ rs.price }} <del class="product-old-price">${{ rs.price }}</del></h3>
-										<div class="product-rating">
-											<i class="fa fa-star"></i>
-											<i class="fa fa-star"></i>
-											<i class="fa fa-star"></i>
-											<i class="fa fa-star"></i>
-											<i class="fa fa-star-o empty"></i>
-										</div>
-										<h2 class="product-name"><a href="/product/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a></h2>
-										<div class="product-btns">
-											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
-											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
-										</div>
-									</div>
-								</div>
+
+							<div class="col-md-12">
+						<div class="order-summary clearfix">
+							<div class="section-title">
+								<h3 class="title">Product List</h3>
 							</div>
-							<!-- /Product Single -->
-							{% endfor %}
+							<table class="shopping-cart-table table">
+								<thead>
+									<tr>
+										<th>Product</th>
+										<th></th>
+										<th class="text-center">Price</th>
+										<th class="text-center">Quantity</th>
+										<th class="text-right"></th>
+									</tr>
+								</thead>
+								<tbody>
+
+								{% for rs in products %}
+									<tr>
+										<td class="thumb"> <a href="/product/{{ rs.id }}/{{ rs.slug }}">
+											<img src="{{ rs.image.url }}" alt="" style="height: 120px">
+										</a></td>
+										<td class="details"> <a href="/product/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a> </td>
+										<td class="price text-center"><strong>${{ rs.price }}</strong><br><del class="font-weak"><small>$40.00</small></del></td>
+										<td class="qty text-center"><input class="input" type="number" value="1"></td>
+										<td class="text-right"><a href="/addtocard/{{ rs.id }}" class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</a></td>
+									</tr>
+									{% endfor %}
+
+								</tbody>
+
+							</table>
+
+						</div>
+
+					</div>
 
 						</div>
 						<!-- /row -->
@@ -285,7 +288,6 @@
 					<!-- /store bottom filter -->
 				</div>
 				<!-- /MAIN -->
-
 			</div>
 			<!-- /row -->
 		</div>
