--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -16,7 +16,7 @@
 	<div id="breadcrumb">
 		<div class="container">
 			<ul class="breadcrumb">
-				<li><a href="/">Home Page</a></li>
+				<li><a href="/">Home</a></li>
 				<li class="active">About</li>
 			</ul>
 		</div>
