--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -45,7 +45,7 @@
 				<div class="menu-nav">
 					<span class="menu-header">Menu <i class="fa fa-bars"></i></span>
 					<ul class="menu-list">
-						<li><a href="#">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="/about">About</a></li>
 						<li class="dropdown mega-dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Women <i class="fa fa-caret-down"></i></a>
 							<div class="custom-menu">
@@ -186,7 +186,6 @@
 								</div>
 							</div>
 						</li>
-						<li><a href="/references">References</a></li>
 						<li><a href="/contact">Contact</a></li>
 
 					</ul>
