--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -12,10 +12,10 @@
 					<!-- banner -->
 					{% for rs in sliderdata %}
 					<div class="banner banner-1">
-						<img src="{{ rs.image.url }}" alt="" style="height: 600px">
+						<img src="{{ rs.image.url }}" alt="" style="height: 530px">
 						<div class="banner-caption text-center">
 							<h2>{{ rs.title }}</h2>
-							<h3 class="white-color font-weak">{{ rs.description }}</h3>
+							<h3 class="white-color font-weak">${{ rs.price }}</h3>
 							<a href="/product/{{ rs.id }}/{{ rs.slug }}" class="primary-btn">Buy</a>
 						</div>
 					</div>
