--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -7,6 +7,13 @@
 		<div class="container">
 			<div class="pull-left">
 				<span> E-shop! </span>
+				{% if messages %}
+					{% for message in messages %}
+						<div class="alert alert-{{ message.tags }}" role="alert">
+							{{ message }}
+						</div>
+					{% endfor %}
+				{% endif %}
 			</div>
 			<div class="pull-right">
 				<ul class="header-top-links">
@@ -35,22 +42,6 @@
 	</div>
 	<!-- /top Header -->
 
-	<script>
-			$(function() {
-                        $("#query").autocomplete({
-                            source: "/search_auto/",
-                            select: function (event, ui) { //item selected
-                                AutoCompleteSelectHandler(event, ui)
-                            },
-                            minLength: 2,
-                        });
-                    });
-                    function AutoCompleteSelectHandler(event, ui)
-                    {
-                        var selectedObj = ui.item;
-                    }
-		</script>
-
 	<!-- header -->
 	<div id="header">
 		<div class="container">
@@ -62,6 +53,22 @@
 					</a>
 				</div>
 				<!-- /Logo -->
+				<script>
+					$(function() {
+                        $("#query").autocomplete({
+                            source: "/search_auto/",
+                            select: function (event, ui) { //item selected
+                                AutoCompleteSelectHandler(event, ui)
+                            },
+                            minLength: 2,
+                        });
+                    });
+
+                    function AutoCompleteSelectHandler(event, ui)
+                    {
+                        var selectedObj = ui.item;
+                    }
+				</script>
 
 				<!-- Search -->
 				<div class="header-search">
@@ -70,19 +77,18 @@
 						<input id="query" name="query" class="input search-input" type="text" placeholder="Enter your keyword">
 						<select  name="catid" class="input search-categories">
 							<option value="0">All Categories</option>
-						{% load mptt_tags %}
+							{% load mptt_tags %}
 
-						{% recursetree category %}
-							{% if node.is_leaf_node %}
-								<option value="{{ node.id }}">{{ node.title }}</option>
-							{% endif %}
-							{% if not node.is_leaf_node %}
-								<optgroup label="{{ node.title }}">
-									{{ children }}
-								</optgroup>
-							{% endif %}
-						{% endrecursetree %}
-
+							{% recursetree category %}
+								{% if node.is_leaf_node %}
+									<option value="{{ node.id }}">{{ node.title }}</option>
+								{% endif %}
+								{% if not node.is_leaf_node %}
+									<optgroup label="{{ node.title }}">
+										{{ children }}
+									</optgroup>
+								{% endif %}
+							{% endrecursetree %}
 						</select>
 						<button class="search-btn"><i class="fa fa-search"></i></button>
 					</form>
@@ -118,7 +124,7 @@
 
 					<!-- Cart -->
 					<li class="header-cart dropdown default-dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+						<a href="/shopcart/">
 							<div class="header-btns-icon">
 								<i class="fa fa-shopping-cart"></i>
 								<span class="qty">3</span>
@@ -127,36 +133,6 @@
 							<br>
 							<span>35.20$</span>
 						</a>
-						<div class="custom-menu">
-							<div id="shopping-cart">
-								<div class="shopping-cart-list">
-									<div class="product product-widget">
-										<div class="product-thumb">
-											<img src="{% static 'img/thumb-product01.jpg'%}" alt="">
-										</div>
-										<div class="product-body">
-											<h3 class="product-price">$32.50 <span class="qty">x3</span></h3>
-											<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
-										</div>
-										<button class="cancel-btn"><i class="fa fa-trash"></i></button>
-									</div>
-									<div class="product product-widget">
-										<div class="product-thumb">
-											<img src="{% static 'img/thumb-product01.jpg'%}" alt="">
-										</div>
-										<div class="product-body">
-											<h3 class="product-price">$32.50 <span class="qty">x3</span></h3>
-											<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
-										</div>
-										<button class="cancel-btn"><i class="fa fa-trash"></i></button>
-									</div>
-								</div>
-								<div class="shopping-cart-btns">
-									<button class="main-btn">View Cart</button>
-									<button class="primary-btn">Checkout <i class="fa fa-arrow-circle-right"></i></button>
-								</div>
-							</div>
-						</div>
 					</li>
 					<!-- /Cart -->
 
