Average and FAQ

--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -23,13 +23,14 @@
 						</div>
 						<div class="product-body">
 							<h3 class="product-price">{{ rs.price }}</h3>
-							<div class="product-rating">
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star-o empty"></i>
-							</div>
+                            <div class="product-rating">
+                                <i class="fa fa-star{% if rs.avaregereview < 1%}-o empty{% endif%}"></i>
+                                <i class="fa fa-star{% if rs.avaregereview < 2%}-o empty{% endif%}"></i>
+                                <i class="fa fa-star{% if rs.avaregereview < 3%}-o empty{% endif%}"></i>
+                                <i class="fa fa-star{% if rs.avaregereview < 4%}-o empty{% endif%}"></i>
+                                <i class="fa fa-star{% if rs.avaregereview < 5%}-o empty{% endif%}"></i>
+                                {{ rs.avaregereview}}/{{ rs.countreview}}
+                            </div>
 							<h2 class="product-name"><a href="#">{{ rs.title }}</a></h2>
 							<div class="product-btns">
 								<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
@@ -67,13 +68,14 @@
 						</div>
 						<div class="product-body">
 							<h3 class="product-price">{{ rs.price }}</h3>
-							<div class="product-rating">
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star-o empty"></i>
-							</div>
+                            <div class="product-rating">
+                                <i class="fa fa-star{% if rs.avaregereview < 1%}-o empty{% endif%}"></i>
+                                <i class="fa fa-star{% if rs.avaregereview < 2%}-o empty{% endif%}"></i>
+                                <i class="fa fa-star{% if rs.avaregereview < 3%}-o empty{% endif%}"></i>
+                                <i class="fa fa-star{% if rs.avaregereview < 4%}-o empty{% endif%}"></i>
+                                <i class="fa fa-star{% if rs.avaregereview < 5%}-o empty{% endif%}"></i>
+                                {{ rs.avaregereview}}/{{ rs.countreview}}
+                            </div>
 							<h2 class="product-name"><a href="#">{{ rs.title }}</a></h2>
 							<div class="product-btns">
 								<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
