--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -18,7 +18,7 @@
 			</div>
 			<div class="pull-right">
 				<ul class="header-top-links">
-					<li><a href="{% url 'faq' %}">{%trans "FAQ" %}</a></li>
+					<li><a href="{% url 'faq' %}">FAQ</a></li>
 				</ul>
 			</div>
 		</div>
@@ -32,7 +32,7 @@
 				<!-- Logo -->
 				<div class="header-logo">
 					<a class="logo" href="/">
-						<img src="{% static 'img/logo.png'%}" alt="">
+						<img src="{% static '' %}img/logo.png" alt="">
 					</a>
 				</div>
 				<!-- /Logo -->
